--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ body {
 .card.visible .card-front {
     transform: rotateY(0);
 }
-
+/*
 .card.matched .card-value {
     animation: dance 1s linear infinite 500ms;
 }
-
+*/
 .overlay-text {
     display: none;
     position: fixed;
@@ -132,16 +132,19 @@ body {
 }
 
 .card-front {
-    border-color: black;
+    border-color: #202020;
+    background-color: white;
     transform: rotateY(180deg);
 }
 
 .card-value {
     transition: transform 100ms ease-in-out;
-    transform: scale(0.8);
+    transform: scale(0.6);
+    object-fit: scale-down;
 }
+
 .card-face:hover .card-value {
-    transform: scale(0.9);
+    
 }
 
 .fsociety {
