--- a/style.css
+++ b/style.css
@@ -51,12 +51,12 @@ body {
 .user-form-container {
     text-align: center;
     vertical-align: middle;
-    margin: 20px 0px 0px 0px;
-
+    margin: 0px 20px 0px 20px;
 }
 
 .user-form-container input {
-    width: 400px;
+    width: 30%;
+    max-width: 350px;
     padding: 8px 12px 10px 12px;
     border: 1px solid rgba(0,0,0,.5);
     background: rgba(0,0,0,.25);
@@ -71,7 +71,7 @@ body {
 }
 
 .menu-item {
-    margin: 20px 10px 0px 0px;
+    margin: 10px;
 }
 
 .game-start-btn {
@@ -270,6 +270,23 @@ body {
 @media (max-width: 600px) {
     .game-container {
         grid-template-columns: repeat(2, auto);
+    }
+
+    .page-title {
+      font-family: MrRobot;
+      font-weight: normal;
+      text-align: center;
+      font-size: 4em;
+      margin: 50px 10px 10px 10px;
+    }
+
+    .user-form-container input {
+      width: 100%;
+      padding: 8px 12px 10px 12px;
+      border: 1px solid rgba(0,0,0,.5);
+      background: rgba(0,0,0,.25);
+      text-align: center;
+      color: rgba(255,255,255,1);
     }
 
     .game-info-container {
