--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     font-family: MrRobot;
     font-weight: normal;
     text-align: center;
+    color: white;
     font-size: 6em;
     margin: 50px 10px 20px 10px;
 }
